# gltest

./: CMakeLists.txt  FragmentShader.frag  VertexShader.vert  loadShaders.cpp  loadShaders.h  main.cpp
cmake/: FindGLFW.cmake
src/: loadShaders.cpp  main.cpp
src/shaders/: .FragmentShader.frag.swp  FragmentShader.frag
